                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2018-03-30
 * Added wing.vue.js get_query_param().
 * Fixed a search bug in var/ideas/index.tt.

2018-03-23
 * Converted UI to use Vue 2 and Bootstrap 4.
 * Read angular2vue.txt for migration details.
 * Now requires: Template::Plugin::JSON::Escape

2018-2-13
 * If Role::Field options returns undef then don't validate it.

2018-2-12
 * Don't double encode HTML entities.

2018-2-8
 * Autokick all jobs in all tubes in the current wingman server

2018-1-16
 * User permanently deactivated flag.

2017-11-28
 * Added JSONField role so that I could add validation everywhere.

2017-10-05
 * Should have written tests for the new check privilege stuff.

2017-10-04
 * check_privilege in Wing::Role::Result::Field now will also describe the field if it is privileged.
 * No longer hiding an error sending an email.

2017-09-25
 * No longer sending Dancer server tokens.
 * Added a very basic security report collector web service.

2017-09-12
 * Better insufficient privileges message.

2017-09-08
 * email_override in the config now also ovrrides BCC.

2017-09-06
 * Added the ideas system so it can be shared across all our various platforms.

2017-09-04
 * You can now specify a relationship name and value to sort on via Rest.

2017-08-24
 * Everyone should be using the latest version of DBIx::Class::InflateColumn::Serializer to avoid JSON encoding errors. You also need to add the following to any fields you serialize to JSON:

  'serializer_options' => { utf8 => 1 }

 Example:

  fields => {
        dbic            => { data_type => 'mediumblob', is_nullable => 1, 'serializer_class' => 'JSON', 'serializer_options' => { utf8 => 1 } },
        view            => 'private',
        edit            => 'postable',