@@ -4,6 +4,11 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-04-04
+ * Better error handling in wing.object and wing.object_list in wing.vue.js.
+ * Added new round() filter to wing.vue.js.
+ * wing.object and wing.object_list now have fetch_api, list_api, and create_api exposed as properties.
+
 2018-03-30
  * Added wing.vue.js get_query_param().
  * Fixed a search bug in var/ideas/index.tt.
